manifests/apps/frontend/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
spec:
  gateways:
    - recast-gateway
  hosts:
    - '*'
  http:
    - name: "recast-frontend-route"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: recast-ui.recast.svc.cluster.local
            port:
              number: 80
